WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234789
[LFC][IFC] Nested inline box continuation fails to omit margin/border/padding start/end values
https://bugs.webkit.org/show_bug.cgi?id=234789
Summary
[LFC][IFC] Nested inline box continuation fails to omit margin/border/padding...
alan
Reported
2022-01-01 15:17:28 PST
inline box fragment in the pre-block needs no end values while the inline box fragment in the post-block needs no start values.
Attachments
Patch
(8.24 KB, patch)
2022-01-01 15:46 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-01 15:46:05 PST
Created
attachment 448164
[details]
Patch
EWS
Comment 2
2022-01-02 07:06:34 PST
Committed
r287514
(
245649@main
): <
https://commits.webkit.org/245649@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448164
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-01-02 07:07:19 PST
<
rdar://problem/87048385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug