[LFC][IFC] Nested inline box continuation fails to omit margin/border/padding start/end values https://bugs.webkit.org/show_bug.cgi?id=234789

Reviewed by Antti Koivisto.

Source/WebCore:

Nested inline boxes inside continuation do not have block parents. It's sufficient to check
for the continuation bits.

Test: fast/inline/unexpected-start-end-decoration-with-nested-continuation.html

* layout/integration/LayoutIntegrationBoxTree.cpp:
(WebCore::LayoutIntegration::BoxTree::buildTree):
* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateInlineBoxDimensions):

LayoutTests:

* fast/inline/unexpected-start-end-decoration-with-nested-continuation-expected.html: Added.
* fast/inline/unexpected-start-end-decoration-with-nested-continuation.html: Added.



Canonical link: https://commits.webkit.org/245649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287514 268f45cc-cd09-0410-ab3c-d52691b4dbfc